fixing the offerings table to be smaller on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -824,6 +824,12 @@ body {
   width:100%;
 }
 
+/* if the browser window is at least 1000px-s wide: */
+@media screen and (min-width: 1000px) {
+  table {
+  width: 80%;}
+}
+
 .offerings-table th {
   /*font-size: 22px;*/
   text-align: center;
